--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -20,7 +20,7 @@
     <hr>
     <hr>
     {% for item in bag_items %}
-        {% unicorn 'item_in_bag' item=item item_index=forloop.counter0 product=item.product size_units=size_units %}
+        {% unicorn 'item_in_bag' item=item item_index=forloop.counter0 product=item.product size_units=size_units key=forloop.counter0%}
     {% endfor %}
     <button class="btn btn-gate form-control special"><a href="{% url 'checkout' %}">Checkout</a></button>
 </div>
